<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/thumbnailCD" />

    <TextView
        android:id="@+id/personDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/bannedImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/bannedImageCD" />

    <ImageView
        android:id="@+id/detailsImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/detailsImageCD" />

</LinearLayout>